Finished work on HTML page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<p>Mark Reichert</p>
+<!doctype html>
+<html>
+<head>
+    <title>Mark Reichert</title>
+</head>
+
+<body>
+   <header>
+    	<h1>Places I've lived</h1>
+   </header>
+   <main>
+	<article>
+		<a name="University City"></a>
+		<h2>University City</h2>
+		<p>
+			I've lived in University City for 27 years.  I love the Loop.  I love being close to the University City Library, with its access to the other Municipal Libraries, and the Charing Cross branch of the St Louis Public library and the Mid County branch of the St. Louis County library.
+		</p>
+		<figure>
+			<img src="images/University City Hall.jpg" alt="University City Hall in University City, MO">
+			<figcaption>University City Hall in University City, MO</figcaption>
+		</figure>
+	</article>
+   </main>
+   <footer>
+	<p>Built for LC101</p>
+	<p>© 2017 Mark Reichert</p>
+   </footer>
+</body>
+</html>
