Changed html to add CSS styling

--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html>
 <head>
     <title>Mark Reichert</title>
+    <link rel="stylesheet" type="text/css" href="styles.css"> 
 </head>
 
 <body>
    <header>
-    	<h1>Places I've lived</h1>
+    	<h1 class="mark">Places I've lived</h1>
    </header>
    <main>
 	<article>
 		<a name="University City"></a>
-		<h2>University City</h2>
-		<p>
+		<h2 id="reichert">University City</h2>
+		<p id="UCity">
 			I've lived in University City for 27 years.  I love the Loop.  I love being close to the University City Library, with its access to the other Municipal Libraries, and the Charing Cross branch of the St Louis Public library and the Mid County branch of the St. Louis County library.
 		</p>
 		<figure>
